# CompetitiveProgammingLanguage

./: README.md  cp-lang.cabal  stack.yaml  test.cp  transpiler.cabal
app/: Main.hs
examples/: dp.cp  fibonacci.cp  graph.cp  hello.cp
src/: Lib.hs  Main.hs  Parser.hs  Transpiler.hs
src/Language/: AST.hs  Builtins.hs  CGen.hs  CLI.hs  Desugar.hs  Error.hs  IR.hs  Lexer.hs  Options.hs  Parser.hs  Pass.hs  Pretty.hs  Runtime.hs  SymbolTable.hs  Transpiler.hs  Typecheck.hs
test/: Spec.hs  Tests.hs
