cabal-version:      3.0
name:               cp-lang
version:            0.1.0.0
synopsis:           A competitive programming language compiler
description:        A minimal compiler for a C-like language designed for competitive programming

executable cp-lang
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    
      base >=4.14 && <5.0
    , text >=1.2.3.0
    , prettyprinter >=1.7.0
    , optparse-applicative >=0.16.1.0
    , containers >=0.6.0.1
  default-language: Haskell2010
  ghc-options:      -Wall